--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -54,6 +54,11 @@
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 30px, rgba(0, 0, 0, 0.23) 0px 6px 10px;
 }
 
+.Centered {
+  display: flex;
+  justify-content: center;
+}
+
 .Brand-image, .Brand-image-wrapper {
   height: 100px;
   width: 100px;
